# hello_serverless_rust_world

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
get_user_by_id/: Cargo.toml
get_user_by_id/src/: main.rs
get_users/: Cargo.toml
get_users/src/: main.rs
post_users/: Cargo.toml
post_users/src/: main.rs
post_users/test/resources/: post_users_request.json
users/: Cargo.toml
users/src/: main.rs
users/test/resources/: get_user_request.json  get_users_request.json
