[package]
name = "get_user_by_id"
version = "0.1.0"
authors = ["Takahiro Miyamoto <miyamoto_ta@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
lambda_runtime_errors = "0.1.1"
lambda_http = "0.1.1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
http = "0.1.1"
log = "0.4.11"
simple_logger = "1.10.0"